--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,10 @@ classifiers = [
 	'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
 ]
-dependencies = []
+dependencies = [
+    "typer",
+    "devgoldyutils"
+]
 
 dynamic = ["version"]
 
@@ -45,3 +48,6 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 include = ["snakelings*"]
+
+[project.scripts]
+snakelings = "snakelings.__main__:app"
