feat: pytest integration, randomized error messages, new exercise

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ classifiers = [
 dependencies = [
     "typer",
     "devgoldyutils",
-    "watchdog"
+    "watchdog",
+    "pytest"
 ]
 
 dynamic = ["version"]
