--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,21 +12,22 @@ keywords = [
     "python beginners"
 ]
 classifiers = [
-	'Operating System :: Microsoft :: Windows :: Windows 11',
-    'Operating System :: Microsoft :: Windows :: Windows 10',
-    'Operating System :: POSIX :: Linux',
-    'License :: OSI Approved :: MIT License',
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
-    'Programming Language :: Python :: 3.10',
-	'Programming Language :: Python :: 3.11',
-    'Programming Language :: Python :: 3.12',
+	"Operating System :: Microsoft :: Windows :: Windows 11",
+    "Operating System :: Microsoft :: Windows :: Windows 10",
+    "Operating System :: POSIX :: Linux",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+	"Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
     "typer",
     "devgoldyutils",
     "watchdog",
-    "pytest"
+    "pytest",
+    "thefuzz"
 ]
 
 dynamic = ["version"]
