--- a/snakelings/exercises/4_assign_variable_wo_equal/config.toml
+++ b/snakelings/exercises/4_assign_variable_wo_equal/config.toml
@@ -5,3 +5,8 @@ title = "Assign a varible"
 [code]
 use_pytest = true
 execute_first = true
+
+[pytest]
+test_scripts = [
+    {module = "test_meow_meow.py"}
+]
