--- a/snakelings/exercises/5_basic_math/config.toml
+++ b/snakelings/exercises/5_basic_math/config.toml
@@ -3,3 +3,8 @@ version = 1
 [code]
 execute_first = true
 use_pytest = true
+
+[pytest]
+test_scripts = [
+    {module = "test_math_function.py"}
+]
