feat: pytest should have colour #14, should be a space around progress information, reduce pytest output and improve UX of some exercises and add clear console function #15
closes #14

--- a/snakelings/exercises/2_print_from_scratch/config.toml
+++ b/snakelings/exercises/2_print_from_scratch/config.toml
@@ -2,6 +2,8 @@ version = 1
 
 title = "Print from scratch"
 
+hint = "Look at what the assertion error is telling you."
+
 [pytest]
 test_scripts = [
     {module = "test_stdout.py"}
